<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:scrollbars="none">

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/HeadingTitle"/>

            <TextView
                android:id="@+id/event_round"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/HeadingTitle"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/event_schedule"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        style="@style/TextLight"/>

                    <LinearLayout
                        android:id="@+id/layout_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/home_logo"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_marginBottom="4dp"
                                android:layout_gravity="center"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_team"
                                android:contentDescription="@string/logo"/>

                            <TextView
                                android:id="@+id/home_team"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textAlignment="center"
                                style="@style/team"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="60dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/event_score"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:textAlignment="center"
                                style="@style/score"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/away_logo"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_marginBottom="4dp"
                                android:layout_gravity="center"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_team"
                                android:contentDescription="@string/logo" />

                            <TextView
                                android:id="@+id/away_team"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textAlignment="center"
                                style="@style/team"/>

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/formation"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2">

                <TextView
                    android:id="@+id/home_formation"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    style="@style/player" />

                <TextView
                    android:id="@+id/away_formation"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:textAlignment="textEnd"
                    android:layout_gravity="end"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    style="@style/player" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/finished"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/goal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="16dp"
                        android:text="@string/goal"
                        style="@style/HeadingSubTitle" />

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/home_goal"
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            style="@style/player" />

                        <TextView
                            android:id="@+id/away_goal"
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:textAlignment="textEnd"
                            android:layout_gravity="end"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            style="@style/player" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:text="@string/red_card"
                    style="@style/HeadingSubTitle" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/home_redcard"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        style="@style/player" />

                    <TextView
                        android:id="@+id/away_redcard"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:textAlignment="textEnd"
                        android:layout_gravity="end"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        style="@style/player" />

                </LinearLayout>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:text="@string/yellow_card"
                    style="@style/HeadingSubTitle" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/home_yellowcard"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        style="@style/player" />

                    <TextView
                        android:id="@+id/away_yellowcard"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:textAlignment="textEnd"
                        android:layout_gravity="end"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        style="@style/player" />

                </LinearLayout>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:text="@string/lineup"
                    style="@style/HeadingSubTitle" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:text="@string/goalkeeper"
                    style="@style/HeadingSubCategory" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/home_goalkeeper"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        style="@style/player" />

                    <TextView
                        android:id="@+id/away_goalkeeper"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:textAlignment="textEnd"
                        android:layout_gravity="end"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        style="@style/player" />

                </LinearLayout>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:text="@string/defense"
                    style="@style/HeadingSubCategory" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/home_defense"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        style="@style/player" />

                    <TextView
                        android:id="@+id/away_defense"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:textAlignment="textEnd"
                        android:layout_gravity="end"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        style="@style/player" />

                </LinearLayout>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:text="@string/midfield"
                    style="@style/HeadingSubCategory" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/home_midfield"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        style="@style/player" />

                    <TextView
                        android:id="@+id/away_midfield"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:textAlignment="textEnd"
                        android:layout_gravity="end"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        style="@style/player" />

                </LinearLayout>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:text="@string/forward"
                    style="@style/HeadingSubCategory" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/home_forward"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        style="@style/player" />

                    <TextView
                        android:id="@+id/away_forward"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:textAlignment="textEnd"
                        android:layout_gravity="end"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        style="@style/player" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/data_empty"
            android:textSize="24sp" />
    </RelativeLayout>

</ScrollView>
